Minor tweak to pagination line-height to fix alignment

--- a/static/css/eucalyptus.css
+++ b/static/css/eucalyptus.css
@@ -1292,10 +1292,10 @@ tr.selected-row td.sorting_1
   background-color: transparent;
   border: 0;
   height: 23px;
+  line-height: 23px;
   width: 30px;
   border-left: 1px solid #fff;
   border-right: 1px solid #d7d5d5;
-
   border-radius: 0;
 
 }
